--- a/playbook.yml
+++ b/playbook.yml
@@ -10,7 +10,8 @@
       - vim
   gather_facts: true
   tasks:
-# Using ansible.builtin.get_url is possible, but no way of limiting to a single file which adds complexity of cleaning after itself.
+# For local copy we can use ansible.builtin.copy, not encoraged tough by various reasons.
+# For remote copy using ansible.builtin.get_url is possible too, but no way of limiting to a single file which adds complexity of cleaning after itself.
     - name: Copy nice-script.sh from git remote repository
       ansible.builtin.get_url:
         url: https://raw.githubusercontent.com/vazome/plat-eng-task-starter/main/scripts/nice-script.sh
